--- a/src/component/aboutMe.css
+++ b/src/component/aboutMe.css
@@ -1,3 +1,9 @@
+.container{
+    font-size: clamp(2.5 rem);
+}
+
+
+
 .heading{
     font-family: teko;
     background-color: antiquewhite;
@@ -48,14 +54,28 @@
     height: 3em;
     /* font */
     font-weight: bold ;
-    margin-left: 25%;
+    margin-left: 5%;
 
     
+}
+.resumecss{
+
+    width: 8em;
+    height: 3em;
+    /* font */
+    font-weight: bold ;
+    margin-left: 9%;
 }
 .contactBtn:hover{
     transition: 200ms;
     background-color: rgb(219, 113, 75);
     color:white
+}
+.resumecss:hover{
+    transition: 200ms;
+    background-color: rgb(219, 113, 75);
+    color:white
+    
 }
 .resume{
     
@@ -125,14 +145,15 @@
     transition: 300ms;
 
 }
-@media (max-width:500px) {
+@media screen and (max-width:735px) and (min-width: 0px) {
     .heading{
         font-size: 30px;
-        margin: 15% 0% 0% 2%;
+        margin: 5% 0% 0% 2%;
         width: 15em;
         display: flex;
         justify-content: center;
         align-items: center;
+        /* position: fixed; */
     }
     .kristan{
         scale: 0.5;
@@ -179,6 +200,12 @@
         align-items: center;
         margin-left: 30%;
     }
+    .resumecss{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 30%;
+    }
     .con{
         font-size: 23px;
     }
@@ -191,3 +218,69 @@
         align-items: center;
     }
 }
+/* @media (max-width:500px) {
+    .heading{
+        font-size: 30px;
+        margin: 15% 0% 0% 2%;
+        width: 15em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+    .kristan{
+        scale: 0.5;
+        display: flex;
+        justify-content: center;
+        margin-top: -145%;
+        /* overflow: auto; */
+    /* } */
+    /* .curved{
+        margin-top: -140%;
+        margin-left: 35%;
+        overflow-wrap: normal;
+        
+    } */
+    /* .head{
+        display: flex;
+        justify-content: center;
+        font-size: 30px;
+        margin-right: 15%;
+    }
+    .introDec{
+        display: flex;
+        justify-content: center;
+        font-size: 23px;
+        margin-right: 10%;
+    } */
+    
+    .section1{
+        /* display: flex; */
+        /* justify-content: center; */
+        /* margin-top: 80%; */
+        /* background-color: blue; */
+        /* scale: 0.8; */
+        /* max-width: 30em; */
+    }
+    /* .connect{
+        scale: 0.8;
+        margin-left: 5%;
+        margin-top: -70%;
+    }
+    .contactBtn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 30%;
+    } */
+    /* .con{
+        font-size: 23px;
+    }
+    .expertise{
+        margin-top: 40%;
+        margin-left: 25%;
+        scale: 0.8; */
+        /* display: flex; */
+        /* justify-content: center; */
+        /* align-items: center;
+    }
+/* } */ 
