--- a/src/component/aboutMe.css
+++ b/src/component/aboutMe.css
@@ -155,17 +155,21 @@
         align-items: center;
         /* position: fixed; */
     }
+    .image{
+        display: flex;
+        justify-content: center;
+        /* align-items: center; */
+        position: fixed;
+    }
     .kristan{
         scale: 0.5;
         display: flex;
         justify-content: center;
-        margin-top: -145%;
+        margin-top: -155%;
         /* overflow: auto; */
     }
     .curved{
-        margin-top: -140%;
-        margin-left: 35%;
-        overflow-wrap: normal;
+        display: none;
         
     }
     .head{
@@ -183,16 +187,19 @@
     
     .section1{
         /* display: flex; */
-        justify-content: center;
-        margin-top: 80%;
+        /* justify-content: center; */
+        margin-top: 90%;
         /* background-color: blue; */
         scale: 0.8;
         max-width: 30em;
     }
     .connect{
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
         scale: 0.8;
         margin-left: 5%;
-        margin-top: -70%;
+        margin-top: -78%;
     }
     .contactBtn{
         display: flex;
@@ -205,6 +212,8 @@
         justify-content: center;
         align-items: center;
         margin-left: 30%;
+        margin-bottom: -10px;
+        
     }
     .con{
         font-size: 23px;
@@ -217,6 +226,8 @@
         justify-content: center;
         align-items: center;
     }
+  
+    
 }
 /* @media (max-width:500px) {
     .heading{
