--- a/src/component/aboutMe.css
+++ b/src/component/aboutMe.css
@@ -159,7 +159,7 @@
         display: flex;
         justify-content: center;
         /* align-items: center; */
-        /* position: fixed; */
+        position: relative;
     }
     .kristan{
         scale: 0.5;
