--- a/src/component/aboutMe.css
+++ b/src/component/aboutMe.css
@@ -39,6 +39,7 @@
     justify-content: right ;
     /* margin-right: 10%; */
     margin-top: -40%;
+    /* margin: auto; */
 
 }
 .connect{
@@ -145,7 +146,7 @@
     transition: 300ms;
 
 }
-@media screen and (max-width:735px) and (min-width: 0px) {
+@media screen and (max-width:735px) and (min-width: 500px) {
     .heading{
         font-size: 30px;
         margin: 5% 0% 0% 2%;
@@ -159,7 +160,9 @@
         display: flex;
         justify-content: center;
         /* align-items: center; */
-        position: relative;
+        margin-top: -30%;
+        /* position:top left; */
+        /* margin: auto; */
     }
     .kristan{
         scale: 0.5;
@@ -191,7 +194,7 @@
         margin-top: 90%;
         /* background-color: blue; */
         scale: 0.8;
-        max-width: 30em;
+        max-width: 40em;
     }
     .connect{
         /* display: flex;
@@ -219,15 +222,117 @@
         font-size: 23px;
     }
     .expertise{
-        margin-top: 40%;
+        margin-top: 50%;
         margin-left: 25%;
         scale: 0.8;
         /* display: flex; */
         justify-content: center;
         align-items: center;
+        max-height: 450px;
     }
   
     
+}
+@media screen and (max-width:499px) and (min-width:350px) {
+
+    .heading{
+        font-size: 30px;
+        margin: 5% 0% 0% 2%;
+        width: 15em;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        /* position: fixed; */
+    }
+    .image{
+        display: flex;
+        justify-content: center;
+        /* align-items: center; */
+        margin-top: -128%;
+        /* position:top left; */
+        /* margin: auto; */
+    }
+    .kristan{
+        scale: 0.5;
+        display: flex;
+        justify-content: center;
+        margin-top: -137%;
+        margin-left: 40%;
+        /* overflow: auto; */
+    }
+    .curved{
+        display: none;
+        
+    }
+    .head{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 30px;
+        max-width: 400px;
+        /* margin-right: 15%; */
+    }
+    .introDec{
+        display: flex;
+        justify-content: center;
+        font-size: 23px;
+        margin-right: 10%;
+    }
+    
+    .section1{
+        /* display: flex; */
+        /* justify-content: center; */
+        margin-top: 90%;
+        /* background-color: blue; */
+        scale: 0.8;
+        max-width: 40em;
+    }
+    .connect{
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
+        scale: 0.8;
+        margin-left: 5%;
+        margin-top: -78%;
+    }
+    .contactBtn{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 0%;
+    }
+    .resumecss{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-left: 30%;
+        margin-bottom: -10px;
+        
+    }
+    .con{
+        font-size: 23px;
+    }
+    .expertise{
+        margin-top: 35%;
+        margin-left: 25%;
+        scale: 0.8;
+    
+        /* display: flex; */
+        justify-content: center;
+        align-items: center;
+        max-height: 450px;
+    }
+    .resumecss{
+        display: flex;
+        justify-content: center;
+
+        width: 8em;
+        height: 3em;
+        /* font */
+        font-weight: bold ;
+         margin-top: 70px;
+        margin-left: 25%; 
+    }
 }
 /* @media (max-width:500px) {
     .heading{
